hphp/hack/test/typecheck/instanceof_enum.php.exp
File "instanceof_enum.php", line 12, characters 24-26:
Foo is uninstantiable (Typing[4002])
File "instanceof_enum.php", line 5, characters 6-8:
Declaration is here
